Add Custom Carousel Layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ android {
     namespace 'com.example.untitleddiscordbot'
     compileSdk 32
 
+    viewBinding {
+        enabled true
+    }
+
     defaultConfig {
         applicationId "com.example.untitleddiscordbot"
         minSdk 25
