--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
     implementation 'me.relex:circleindicator:2.1.6'
     //Carousel view
     implementation 'org.imaginativeworld.whynotimagecarousel:whynotimagecarousel:2.1.0'
+
+    //Bottom Nav Menu
+    implementation 'com.github.st235:expandablebottombar:1.5.1'
 }
