--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 dependencies {
 
     def nav_version = "2.3.5"
+    def lifecycle_version = "2.4.0"
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
@@ -51,11 +52,15 @@ dependencies {
     //AppAuth
     implementation 'net.openid:appauth:0.11.1'
 
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.9'
 
     // Circle Indicator (To fix the xml preview "Missing classes" error)
     implementation 'me.relex:circleindicator:2.1.6'
     //Carousel view
     implementation 'org.imaginativeworld.whynotimagecarousel:whynotimagecarousel:2.1.0'
+    //No internet connection
+    implementation 'org.imaginativeworld.oopsnointernet:oopsnointernet:2.0.0'
 
     //Bottom Nav Menu
     implementation 'com.github.st235:expandablebottombar:1.5.1'
@@ -64,4 +69,15 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
+    //Networking
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
+    //Lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
 }
