--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    //fuzzy wuzzy search https://github.com/xdrop/fuzzywuzzy
+    implementation 'me.xdrop:fuzzywuzzy:1.4.0'
+
 }
