--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //fast scroller
+    implementation 'xyz.danoz:recyclerviewfastscroller:0.1.3'
+
     //Lottie Gradle import
     implementation 'com.airbnb.android:lottie:5.2.0'
 
