--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,7 @@ dependencies {
 
     //DrawerLayout
     implementation "androidx.drawerlayout:drawerlayout:1.1.1"
+
+    //Palette
+    implementation "androidx.palette:palette:1.0.0"
 }
